<resources>
    <string name="app_name">AvantGarde</string>
    <string name="facebook_app_id">439766510008971</string>
    <string name="fb_login_protocol_scheme">fb439766510008971</string>
    <string name="t_and_c_text">Thank you for using Avant Garde! These terms of service (\"Term\") cover your use and access to the services, client software and website (\"Services\") provided by Avant Garde. Our Privacy Policy explains how we collect and use your information while our Acceptable Use Policy outlines your responsibilities when using our Services. By using our Services, you\'re agreeing to be bound by these Terms, and to review our Privacy and Acceptable Use policies. If you\'re using our Services for an organization, you\'re agreeing to these Terms on behalf of that organization.</string>
    <string name="done">Done</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="terms_of_service">terms of service</string>
    <string name="t_and_c_agreement">I have read and agree to the</string>
    <string name="sign_up">Sign Up</string>
    <string name="landlord">Landlord</string>
    <string name="tenant">Tenant</string>
    <string name="who_are_you">Who are you?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">REGISTER</string>
    <string name="avant_garde">Avant Garde</string>
    <string name="password_recovery">Password Recovery</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="that_s_ok_we_got_your_back">That\'s OK… We got your back.</string>
    <string name="below_are_your_registered_email_and_password">Below are your registered email and password.</string>
    <string name="email_avant_garde_com">Email: avant@garde.com</string>
    <string name="password_sample">Password: ###</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="state">State</string>
    <string name="postcode">Postcode</string>
    <string name="property_status">Property Status</string>
    <string name="purchase_price">Purchase Price</string>
    <string name="mortgage_info">Mortgage Info</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_message">We just need your registered email to send the reset password link to you.</string>
    <string name="please_enter_your_email_here">Please enter your email here</string>
    <string name="submit">Submit</string>
    <string name="sample_price">$ 200,000</string>
    <string name="sample_address">3809 Illinois Ave, \nSt. Charles, IL 60174</string>
    <string name="status_active">Status: Active</string>
    <string name="description">Description</string>
    <string name="add_tenant">Add Tenant</string>
    <string name="call">call</string>
    <string name="message">message</string>
    <string name="email_lower_case">email</string>
    <string name="mobile">Mobile</string>
    <string name="property_address">Property Address</string>
    <string name="sample_phone">+1 234 679 3571</string>
    <string name="sample_email">abc@gmail.com</string>
    <string name="keep_me_sign_in">Remember me</string>
    <string name="sign_in">Sign in</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_now">Sign Up Now!</string>
    <string name="user_type">User Type</string>
    <string name="log_out">Log out</string>
    <string name="more_info">More info</string>
    <string name="or">---------------------------------- or ------------------------------------</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_google">Sign in with Google</string>
</resources>
